bug 491977: fix "leak" of deadlock detector statics. r=bsmedberg