xpcom/glue/DeadlockDetector.h
@@ -370,6 +370,17 @@ public:
     }
 
     /**
+     * ~DeadlockDetector
+     *
+     * *NOT* thread safe.
+     */
+    ~DeadlockDetector()
+    {
+        PL_HashTableDestroy(mOrdering);
+        PR_DestroyLock(mLock);
+    }
+
+    /**
      * Add
      * Make the deadlock detector aware of |aResource|.
      *
